--- a/index.html
+++ b/index.html
@@ -129,19 +129,17 @@
 
     <script>
       const contextMargin = {top: 4, right: 30, bottom: 20, left: 100};
-      const smallMultiplesMargin = {top: 10, right: 30, bottom: 20, left: 100};
+      const smallMultiplesMargin = {top: 20, right: 30, bottom: 20, left: 100};
       
       let chartData;
       let dateDomain;
+      let brushedDateDomain;
       let contextChart;
       let smallMultiplesChart;
-      let currentBrushedDateDomain;
 
       let parseTime = d3.timeParse("%H:%M:%S.%f");
 
-      let stripDecimals = function(t) {
-        // console.log(t.slice(0, -3));
-        // console.log(parseTime(t.slice(0, -3)));
+      let stripDecimals = function(t) {;
         return t.length > 15 ? t.slice(0, -(t.length - 15)) : t;
       }
 
@@ -192,12 +190,16 @@
       const loadFilesFromNames = (filenames) => {
         if (filenames) {
           allFileData = [];
+          brushedDateDomain = null;
+          contextChart = null;
+          focusChart = null;
+          dateDomain = null;
           Promise.all(filenames.map(f => d3.csv(f, type)))
             .then(function (filesData) {
               for (let i = 0; i < filesData.length; i++) {
                 const dateExtent = d3.extent(filesData[i], d => d.date);
                 allFileData.push({
-                  seriesTitle: filenames[i],
+                  seriesTitle: filenames[i].substring(0, filenames[i].indexOf('.csv')),
                   dateExtent: dateExtent,
                   values: filesData[i]
                   // values: i % 2 ? filesData[i] : reverseTimeValues(filesData[i]),
@@ -212,7 +214,6 @@
               const datePadding = (dateDomain[1] - dateDomain[0]) * 0.05;
               dateDomain[0] = new Date(dateDomain[0].getTime() - datePadding);
               dateDomain[1] = new Date(dateDomain[1].getTime() + datePadding);
-              // removeCharts();
               createContextChart();
               createSmallMultiplesChart();
             })
@@ -225,6 +226,10 @@
       const loadFiles = () => {
         const files = document.getElementById('fileInput').files;
         if (files) {
+          brushedDateDomain = null;
+          contextChart = null;
+          focusChart = null;
+          dateDomain = null;
           let promises = [];
           for (let i = 0; i < files.length; i++) {
             const promise = new Promise(resolve => {
@@ -243,9 +248,9 @@
                 try {
                   const fileData = d3.csvParse(fileContent, type);
                   const dateExtent = d3.extent(fileData, d => d.date);
-                  // console.log(fileData);
                   allFileData.push({
-                    seriesTitle: file.name,
+                    // seriesTitle: file.name,
+                    seriesTitle: file.name.substring(0, file.name.indexOf('.csv')),
                     dateExtent: dateExtent,
                     values: fileData,
                   });
@@ -253,7 +258,7 @@
                   console.log(error);
                 }
               });
-              // console.log(allFileData);
+              console.log('Finished loading data');
               chartData = allFileData;
               dateDomain = [
                 d3.min(chartData.map(d => d.values), d => d3.min(d, d => d.date)),
@@ -264,9 +269,10 @@
               dateDomain[1] = new Date(dateDomain[1].getTime() + datePadding);
 
               createContextChart();
+              console.log('Finished creating context chart');
+
               createSmallMultiplesChart();
-              // removeCharts();
-              // createCharts();
+              console.log('Finished creating small multiples chart');
             })
             .catch(error => {
               console.log(error)
@@ -274,18 +280,10 @@
         }
       }
 
-      // const removeCharts = () => {
-      //   d3.select('#placeholder').remove();
-      //   d3.select('#contextChart').selectAll("*").remove();
-      //   d3.select('#smallMultiplesCharts').selectAll("*").remove();
-      // }
-
-      const handleContextRangeBrushing = (brushedDateDomain) => {
-        console.log('handling a context brushing');
-        console.log(brushedDateDomain);
-        dateDomain = brushedDateDomain;
+      const handleContextRangeBrushing = (newDateDomain) => {
+        brushedDateDomain = newDateDomain;
         if (smallMultiplesChart) {
-          smallMultiplesChart.dateDomain(dateDomain);
+          smallMultiplesChart.dateDomain(brushedDateDomain);
         }
       };
 
@@ -319,24 +317,21 @@
       };
 
       const contextChartHeightSliderChanged = () => {
-        // removeCharts();
         createContextChart();
         if (contextChart) {
-          const contextChartHeight = getContextSeriesChartHeight() * chartData.length;
-          document.getElementById("main").style.marginTop = `${450 + contextChartHeight}px`;
+          const contextChartHeight = (getContextSeriesChartHeight() * chartData.length) + contextMargin.top + contextMargin.bottom;
+          document.getElementById("main").style.marginTop = `${240 + contextChartHeight}px`;
           contextChart.height(contextChartHeight);
         }
       };
 
       const showContextSummaryCheckChanged = () => {
-        // createContextChart();
         if (contextChart) {
           contextChart.showSeriesStatistics(getShowContextStatisticalSummary());
         }
       };
 
       const focusChartHeightSliderChanged = () => {
-        // createSmallMultiplesChart();
         if (smallMultiplesChart) {
           smallMultiplesChart.height(getFocusChartHeight());
         }
@@ -352,9 +347,8 @@
         d3.select('#contextChart').selectAll("*").remove();
 
         if (chartData) {
-          const contextChartHeight = getContextSeriesChartHeight() * chartData.length;
+          const contextChartHeight = (getContextSeriesChartHeight() * chartData.length) + contextMargin.top + contextMargin.bottom;
           document.getElementById("main").style.marginTop = `${240 + contextChartHeight}px`;
-
           const divWidth = document.getElementById('contextChart').clientWidth;
 
           contextChart = contextTimeChart()
@@ -374,75 +368,22 @@
 
       const createSmallMultiplesChart = () => {
         const showFocus = getShowFocusChart();
-        console.log(`showFocus: ${showFocus}`);
-        console.log(`showFocusRawData: ${getShowFocusRawData()}`);
 
         if (getShowFocusChart() && chartData) {
           d3.select('#placeholder').remove();
           d3.select('#smallMultiplesCharts').selectAll("*").remove();
 
-          // if (chartData) {
-            const divWidth = document.getElementById('contextChart').clientWidth;
-
-            smallMultiplesChart = smallMultiplesTimeChart()
-              .margin(smallMultiplesMargin)
-              .width(divWidth)
-              .height(getFocusChartHeight())
-              .showRawData(getShowFocusRawData())
-              .dateDomain(dateDomain)
-              .dateValue(d => d.date)
-              .yValue(d => d.value)
-              .showPoints(false)
-              .showLine(true)
-              .curveFunction(d3.curveMonotoneX);
-
-            d3.select('#smallMultiplesCharts').call(smallMultiplesChart, chartData);
-          // }
-        }
-      };
-
-      /*
-      const createCharts = () => {
-        if (chartData) {
-          const contextSeriesChartHeight = getContextSeriesChartHeight();
-          console.log(contextSeriesChartHeight);
-          // console.log(document.getElementById("main").style);
-          const contextChartHeight = contextSeriesChartHeight * chartData.length;
-          document.getElementById("main").style.marginTop = `${420 + contextChartHeight}px`;
-          // document.getElementById("main").style['margin-top'] = document.getElementById("main").style.margin-top + contextChartHeight;
-
-          let dateDomain = [
-            d3.min(chartData.map(d => d.values), d => d3.min(d, d => d.date)),
-            d3.max(chartData.map(d => d.values), d => d3.max(d, d => d.date))
-          ];
-          const datePadding = (dateDomain[1] - dateDomain[0]) * 0.05;
-          dateDomain[0] = new Date(dateDomain[0].getTime() - datePadding);
-          dateDomain[1] = new Date(dateDomain[1].getTime() + datePadding);
-          // console.log(dateDomain);
-
-          let divWidth = document.getElementById('contextChart').clientWidth;
-
-          contextChart = contextTimeChart()
-            .margin(margin)
-            .width(divWidth)
-            .height(contextChartHeight)
-            .curveFunction(d3.curveMonotoneX)
-            .dateDomain(dateDomain)
-            .showSeriesStatistics(false)
-            .seriesStartDate(d => d.dateExtent[0])
-            .seriesEndDate(d => d.dateExtent[1])
-            .seriesName(d => d.seriesTitle)
-            .rangeBrushedHandler(handleContextRangeBrushing);
-          d3.select('#contextChart').call(contextChart, chartData);
+          const divWidth = document.getElementById('contextChart').clientWidth;
 
           smallMultiplesChart = smallMultiplesTimeChart()
-            .margin(margin)
+            .margin(smallMultiplesMargin)
             .width(divWidth)
-            .height(smallMultipleChartHeight)
-            .showRawData(false)
-            .dateDomain(dateDomain)
+            .height(getFocusChartHeight())
+            .showRawData(getShowFocusRawData())
+            .dateDomain(brushedDateDomain ? brushedDateDomain : dateDomain)
             .dateValue(d => d.date)
             .yValue(d => d.value)
+            .seriesName(d => d.seriesTitle)
             .showPoints(false)
             .showLine(true)
             .curveFunction(d3.curveMonotoneX);
@@ -450,17 +391,16 @@
           d3.select('#smallMultiplesCharts').call(smallMultiplesChart, chartData);
         }
       };
-      */
 
       // loadFilesFromNames(['./data/NV_JAF.BOSCH.p.2019-11-20.15-23-44_16-00-00.csv']);
       // loadFilesFromNames(['./data/NV_JAF.BOSCH.p.2019-11-20.15-23-44_16-00-00.csv', './data/NV_JAF2.BOSCH.p.2019-11-20.15-23-44_16-00-00.csv']);
-      loadFilesFromNames([
-        './data/NVJAF_Generator_Bosch_ax_2019-12-11_0000_2400.csv',
-        './data/NVJAF_Generator_Bosch_gx_2019-12-11_0000_2400.csv',
-        './data/NVJAF_Generator_Bosch_mr_2019-12-11_0000_2400.csv',
-        './data/NVJAF_Generator_Bosch_mx_2019-12-11_0000_2400.csv',
-        './data/NVJAF_Generator_Bosch_p_2019-12-11_0000_2400.csv'
-      ]);
+      // loadFilesFromNames([
+      //   './data/NVJAF_Generator_Bosch_ax_2019-12-11_0000_2400.csv',
+      //   './data/NVJAF_Generator_Bosch_gx_2019-12-11_0000_2400.csv',
+      //   './data/NVJAF_Generator_Bosch_mr_2019-12-11_0000_2400.csv',
+      //   './data/NVJAF_Generator_Bosch_mx_2019-12-11_0000_2400.csv',
+      //   './data/NVJAF_Generator_Bosch_p_2019-12-11_0000_2400.csv'
+      // ]);
     </script>
   </body>
 </html>
